--- a/package.json
+++ b/package.json
@@ -5,35 +5,40 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.15",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.1",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "next": "13.1.6",
-    "next-auth": "^4.19.0",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6",
-    "postcss": "^8.4.14",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.9.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^4.10.1",
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.5.1"
