--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.15",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "flowbite": "^1.6.3",
@@ -20,6 +19,7 @@
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
