--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "swr": "^2.0.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
