--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,15 @@
   "plugins": ["@typescript-eslint"],
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
   "rules": {
-    "@typescript-eslint/consistent-type-imports": "warn"
+    "@typescript-eslint/consistent-type-imports": "warn",
+    "@typescript-eslint/no-misused-promises": [
+      "error",
+      {
+        "checksVoidReturn": {
+          // Allow `void` return type for JSX attributes such as `onClick` / `onSubmit`
+          "attributes": false
+        }
+      }
+    ]
   }
 }
