--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "swr": "^2.0.3",
+    "tsx": "^3.12.3",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "^18.13.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
@@ -45,5 +47,8 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.5.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
