--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "flowbite-react": "^0.3.8",
     "next": "13.2.0",
     "next-auth": "^4.19.2",
+    "next-superjson-plugin": "^0.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "superjson": "^1.12.2",
     "swr": "^2.0.3",
     "tsx": "^3.12.3",
     "zod": "^3.20.6"
