--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
+    "@tanstack/react-query": "^4.24.10",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "next": "13.2.0",
