--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "@faker-js/faker": "8.0.0-alpha.0",
     "@types/node": "^18.13.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
