remove post brand, add zod-prisma-types

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^4.7.1",
     "superjson": "^1.12.2",
     "tsx": "^3.12.3",
-    "zod": "^3.20.6"
+    "zod": "^3.20.6",
+    "zod-prisma-types": "^2.3.3"
   },
   "devDependencies": {
     "@faker-js/faker": "8.0.0-alpha.0",
