--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
@@ -21,6 +22,7 @@
     "@trpc/server": "^10.12.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "image-conversion": "^2.1.1",
     "next": "13.2.0",
     "next-auth": "^4.19.2",
     "next-superjson-plugin": "^0.5.6",
