--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
+    "@supabase/supabase-js": "^2.10.0",
     "@tanstack/react-query": "^4.24.10",
     "@trpc/client": "^10.12.0",
     "@trpc/next": "^10.12.0",
     "@trpc/react-query": "^10.12.0",
     "@trpc/server": "^10.12.0",
+    "@types/uuid": "^9.0.1",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "image-conversion": "^2.1.1",
@@ -32,6 +34,7 @@
     "react-icons": "^4.7.1",
     "superjson": "^1.12.2",
     "tsx": "^3.12.3",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6",
     "zod-prisma-types": "^2.3.3"
   },
