--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "superjson": "^1.12.2",
     "tsx": "^3.12.3",
     "uuid": "^9.0.0",
