--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-next": "13.2.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.10.1",
     "tailwindcss": "^3.2.6",
