--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.19.2",
     "next-superjson-plugin": "^0.5.6",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
