--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
@@ -43,6 +44,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "8.0.0-alpha.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
@@ -53,6 +57,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.2.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
