--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest --watch"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
@@ -64,7 +65,8 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.10.1",
     "tailwindcss": "^3.2.6",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "husky": "^8.0.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.5.1"
