--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.12.0",
     "@trpc/server": "^10.12.0",
     "@types/uuid": "^9.0.1",
+    "cookies-next": "^2.1.1",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "image-conversion": "^2.1.1",
@@ -57,6 +58,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.2.0",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
@@ -65,8 +67,7 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.10.1",
     "tailwindcss": "^3.2.6",
-    "typescript": "^4.9.5",
-    "husky": "^8.0.0"
+    "typescript": "^4.9.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.5.1"
