--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "superjson": "^1.12.2",
