--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
-    "@supabase/supabase-js": "^2.10.0",
+    "@supabase/supabase-js": "^2.11.0",
     "@tanstack/react-query": "^4.26.1",
     "@trpc/client": "^10.16.0",
     "@trpc/next": "^10.16.0",
@@ -48,7 +48,7 @@
     "@faker-js/faker": "8.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.4.1",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
@@ -57,6 +57,7 @@
     "@typescript-eslint/parser": "^5.55.0",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
+    "csstype": "^3.1.1",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.0",
     "husky": "^8.0.3",
@@ -75,5 +76,8 @@
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
+  },
+  "peerDependencies": {
+    "csstype": "^3.1.1"
   }
 }
