--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "dev:debug": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev:debug": "cross-env NODE_OPTIONS='--inspect-brk' next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "jest"
   },
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
@@ -61,7 +60,6 @@
     "csstype": "^3.1.1",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.0",
-    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
