--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "test": "jest"
   },
+  "packageManager": "pnpm@7.30.3",
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@hookform/error-message": "^2.0.1",
