--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: pnpm/action-setup@646cdf48217256a3d0b80361c5a50727664284f2
+    - uses: pnpm/action-setup@v2
     - uses: actions/setup-node@v3
       with:
         node-version: '18'
