--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,18 +1,18 @@
-name: Run tests
-on: [push]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Create dummy .env file
-      run: mv .env.example .env
-    - uses: pnpm/action-setup@v2
-      with:
-        version: 7.30.3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        cache: 'pnpm'
-    - run: pnpm install --frozen-lockfile
-    - run: pnpm test
+# name: Run tests
+# on: [push]
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Create dummy .env file
+#       run: mv .env.example .env
+#     - uses: pnpm/action-setup@v2
+#       with:
+#         version: 7.30.3
+#     - uses: actions/setup-node@v3
+#       with:
+#         node-version: '18'
+#         cache: 'pnpm'
+#     - run: pnpm install --frozen-lockfile
+#     - run: pnpm test
