--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "13.2.0",
     "next-auth": "^4.20.1",
     "next-superjson-plugin": "^0.5.6",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
