--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@types/uuid": "^9.0.1",
+    "@vercel/analytics": "^0.1.11",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
     "flowbite": "^1.6.4",
