--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "start": "next start",
     "test": "jest"
   },
+  "engines": {
+    "node": ">=18.16.0 <19.0"
+  },
   "packageManager": "pnpm@7.30.3",
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
@@ -52,7 +55,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
