--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test": "jest"
   },
   "engines": {
-    "node": ">=18.16.0 <19.0"
+    "node": ">=18.16.0"
   },
-  "packageManager": "pnpm@7.30.3",
+  "packageManager": "pnpm@8.15.3",
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@hookform/error-message": "^2.0.1",
