--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.1.0",
+    "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@supabase/supabase-js": "^2.21.0",
@@ -28,8 +28,8 @@
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
     "@types/uuid": "^9.0.1",
-    "@vercel/analytics": "^1.0.0",
-    "classnames": "^2.3.2",
+    "@vercel/analytics": "^1.3.1",
+    "classnames": "^2.5.1",
     "cookies-next": "^2.1.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
@@ -40,13 +40,13 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "^7.43.9",
-    "react-hot-toast": "^2.4.0",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "superjson": "^1.12.3",
     "tsx": "^3.12.6",
-    "uuid": "^9.0.0",
+    "uuid": "^10.0.0",
     "zod": "^3.21.4",
     "zod-prisma-types": "^2.5.6"
   },
@@ -54,26 +54,26 @@
     "@faker-js/faker": "8.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.13",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "csstype": "^3.1.2",
+    "csstype": "^3.1.3",
     "eslint": "^8.39.0",
     "eslint-config-next": "14.2.14",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "postcss": "^8.4.26",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^5.0.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.5.1"
@@ -83,5 +83,21 @@
   },
   "peerDependencies": {
     "csstype": "^3.1.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "@adobe/css-tools@<4.3.1": ">=4.3.1",
+      "@adobe/css-tools@<4.3.2": ">=4.3.2",
+      "es5-ext@>=0.10.0 <0.10.63": ">=0.10.63",
+      "@babel/traverse@<7.23.2": ">=7.23.2",
+      "word-wrap@<1.2.4": ">=1.2.4",
+      "tough-cookie@<4.1.3": ">=4.1.3",
+      "braces@<3.0.3": ">=3.0.3",
+      "ws@>=8.0.0 <8.17.1": ">=8.17.1",
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "micromatch@<4.0.8": ">=4.0.8",
+      "zod@<=3.22.2": ">=3.22.3",
+      "cookie@<0.7.0": ">=0.7.0"
+    }
   }
 }
