--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@trpc/next": "^10.21.1",
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "cookies-next": "^4.2.1",
@@ -44,14 +44,14 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "superjson": "^1.12.3",
+    "superjson": "^2.2.1",
     "tsx": "^3.12.6",
     "uuid": "^10.0.0",
     "zod": "^3.21.4",
     "zod-prisma-types": "^2.5.6"
   },
   "devDependencies": {
-    "@faker-js/faker": "8.0.0-alpha.0",
+    "@faker-js/faker": "9.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.13",
