add GOOGLE_* env vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ VERCEL_URL="http://localhost:3000"
 NEXTAUTH_SECRET="1234"
 GITHUB_SECRET="1234"
 GITHUB_ID="1234"
+GOOGLE_SECRET="1234"
+GOOGLE_ID="1234"
 DATABASE_URL="postgresql://dummy"
 SUPABASE_URL="https://dummy"
 SUPABASE_ANON_KEY="1234"
