--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "image-conversion": "^2.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "next-superjson-plugin": "^0.6.3",
@@ -44,6 +46,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-leaflet": "^4.2.1",
     "superjson": "^2.2.1",
     "tsx": "^4.19.1",
     "uuid": "^10.0.0",
@@ -55,6 +58,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20.16.11",
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.3.11",
